force-app/main/default/objects/zaapit__View_Style__c/fields/zaapit__css__c.field-meta.xml
<CustomField>
    <fullName>zaapit__css__c</fullName>
    <label>Css</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>