force-app/main/default/objects/zaapit__View_Style__c/fields/zaapit__Field_Style__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Field_Style__c</fullName>
    <label>Field Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>