force-app/main/default/objects/zaapit__View_Style__c/fields/zaapit__Field_To_Color__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Field_To_Color__c</fullName>
    <label>Field To Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>