force-app/main/default/objects/zaapit__View_Style__c/fields/zaapit__Row_Style__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Row_Style__c</fullName>
    <label>Row Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>