force-app/main/default/objects/zaapit__View_Style__c/fields/zaapit__SOQL__c.field-meta.xml
<CustomField>
    <fullName>zaapit__SOQL__c</fullName>
    <label>SOQL Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>