force-app/main/default/objects/zaapit__View_Style__c/fields/zaapit__Style_Description__c.field-meta.xml
<CustomField>
    <fullName>zaapit__Style_Description__c</fullName>
    <label>Style Description</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>